[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/aseprite_files/places/temple_enterance/temple_entrance.ase" type="SpriteFrames" id=2]
[ext_resource path="res://assets/aseprite_files/places/snow.ase" type="SpriteFrames" id=3]
[ext_resource path="res://scenes/places/base_place.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/places/temple_enterance/temple_enterance.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="temple_enterance" instance=ExtResource( 4 )]
script = ExtResource( 6 )

[node name="bg" parent="background" index="0"]
frames = ExtResource( 2 )
animation = "closed"
frame = 4

[node name="outer" parent="logic/border" index="0"]
polygon = PoolVector2Array( 0, 108, 32, 85, 53, 77, 76, 77, 80, 68, 98, 78, 107, 105, 128, 121, 128, 128, 0, 128 )

[node name="door" type="Position2D" parent="logic/entry_points" index="0"]
position = Vector2( 66, 92 )

[node name="mountain" type="Position2D" parent="logic/entry_points" index="1"]
position = Vector2( 39, 127 )

[node name="rock" type="Position2D" parent="logic/npc_positions" index="0"]
position = Vector2( 78, 107 )

[node name="door_trigger" type="Area2D" parent="logic/portals" index="0"]
position = Vector2( 66, 82 )
collision_layer = 0
collision_mask = 32

[node name="collision" type="CollisionShape2D" parent="logic/portals/door_trigger" index="0"]
shape = SubResource( 1 )

[node name="back_enterance_trigger" type="Area2D" parent="logic/portals" index="1"]
position = Vector2( 28, 88 )
collision_layer = 0
collision_mask = 32

[node name="collision" type="CollisionShape2D" parent="logic/portals/back_enterance_trigger" index="0"]
shape = SubResource( 1 )

[node name="snow" type="AnimatedSprite" parent="foreground" index="0"]
frames = ExtResource( 3 )
animation = "idle"
frame = 1
playing = true
centered = false

[connection signal="animation_finished" from="background/bg" to="." method="_on_bg_animation_finished"]
[connection signal="body_entered" from="logic/portals/door_trigger" to="." method="_door_trigger"]
[connection signal="body_entered" from="logic/portals/back_enterance_trigger" to="." method="_back_enterance_trigger"]
